--- a/project/package.json
+++ b/project/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/PhaILazn/rSed#readme",
   "dependencies": {
+    "connect-mongo": "^3.2.0",
     "dotenv": "^8.2.0",
     "ejs": "^3.0.1",
     "express": "^4.17.1",
