--- a/project/package.json
+++ b/project/package.json
@@ -22,6 +22,8 @@
     "ejs": "^3.0.1",
     "express": "^4.17.1",
     "express-session": "^1.17.0",
+    "moment": "^2.24.0",
+    "moment-timezone": "^0.5.28",
     "mongoose": "^5.9.1",
     "nodemon": "^2.0.2",
     "passport": "^0.4.1",
